<resources>
    <string name="app_name">Правила</string>
    <string name="app_navigate_up">Перейти наверх</string>
    <string name="app_rule_number">§ %d</string>
    <string name="app_action_search_rules">Поиск правил</string>
    <string name="app_action_settings">Настройки</string>
    <string name="app_action_about">О программе</string>

    <string name="section_rule_numbers_range">§§ %d–%d</string>
    <string name="section_rule_number">§ %d</string>

    <string name="rule_rule_number">§ %d</string>
    <string name="rule_action_go_to_next_page">Перейти к следующему правилу</string>
    <string name="rule_action_go_to_prev_page">Перейти к предыдущему правилу</string>
    <string name="rule_action_share">Поделиться</string>

    <string name="search_bar_search_rules">Поиск правил</string>

    <string name="search_no_results">Ничего не найдено</string>
    <string name="search_suggestions_explanation">Ищите номера параграфов и всё, что душе угодно:</string>

    <string name="about_title">О программе</string>
    <string name="about_see_open_source_licences">Посмотреть лицензии открытого ПО</string>
    <string name="about_see_privacy_policy">Посмотреть политику конфиденциальности</string>
    <string name="about_title_developer">Разработчик</string>
    <string name="about_developer_name">Александр Петраков</string>
    <string name="about_title_version">Версия</string>
    <string name="about_version_placeholder">-.-</string>
    <string name="about_title_inspiration">Вдохновение</string>
    <string name="about_the_rules_ru" translatable="false">therules.ru</string>
    <string name="about_error_no_web_browser">Не удалось открыть веб-браузер</string>
    <string name="about_feedback_title">Обратная связь</string>
    <string name="about_rate_app">Оценить приложение в Google Play</string>
    <string name="about_error_no_google_play">Не удалось открыть Google Play</string>
    <string name="about_email_developer">Написать разработчику</string>
    <string name="about_error_no_email_client">Не удалось открыть почтовый клиент</string>
    <string name="feedback_email_subject_template">Правила русского языка %s</string>
    <string name="feedback_email_body_template">Версия приложения: %s\nУстройство: %s\nВерсия ОС: %s\nЯзык: %s</string>
    <string name="about_settings_title">Настройки</string>
    <string name="about_theme">Тема оформления</string>
    <string name="about_theme_follow_system">Как в системе</string>
    <string name="about_theme_light">Светлая</string>
    <string name="about_theme_dark">Тёмная</string>
</resources>