<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:navigationContentDescription="@string/app_navigate_up"
            app:navigationIcon="@drawable/ic_action_close" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.ZhiShi.TextCell.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_developer"
                    android:textAppearance="?textAppearanceOverline" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_developer_name"
                    android:textAppearance="@style/TextAppearance.ZhiShi.Subtitle1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_version"
                    android:textAppearance="?textAppearanceOverline" />

                <TextView
                    android:id="@+id/version_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_version_placeholder"
                    android:textAppearance="@style/TextAppearance.ZhiShi.Subtitle1"
                    tools:text="1.0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inspiration_cell"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_clickable_surface"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_inspiration"
                    android:textAppearance="?textAppearanceOverline" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_the_rules_ru"
                    android:textAppearance="@style/TextAppearance.ZhiShi.Subtitle1"
                    android:textColor="?colorPrimary" />
            </LinearLayout>

            <TextView
                android:id="@+id/see_open_source_licenses_button"
                style="@style/Widget.ZhiShi.TextCell.Action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_see_open_source_licences" />

            <TextView
                android:id="@+id/see_privacy_policy_button"
                style="@style/Widget.ZhiShi.TextCell.Action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_see_privacy_policy" />

            <TextView
                style="@style/Widget.ZhiShi.TextCell.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_feedback_title" />

            <TextView
                android:id="@+id/rate_app_button"
                style="@style/Widget.ZhiShi.TextCell.Action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_rate_app" />

            <TextView
                android:id="@+id/email_developer_button"
                style="@style/Widget.ZhiShi.TextCell.Action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/about_email_developer" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>